# luna

./: Cargo.toml  README.md  install_themes.sh
assets/: config.toml
assets/plugins/: autoaliases.lua  autoenv.lua  git.lua  runtime_version.lua  windows-aliases.lua
assets/themes/: default.lua  moe.lua
docs/: config.md  plugins.md  themes.md
src/: main.rs  setup.rs
src/commands/: mod.rs  system.rs
src/commands/builtins/: alias.rs  back.rs  cat.rs  cd.rs  cdi.rs  clear.rs  cp.rs  cut.rs  echo.rs  env.rs  exit.rs  file.rs  find.rs  grep.rs  has.rs  head.rs  history.rs  jq.rs  ls.rs  math.rs  mkdir.rs  mod.rs  mv.rs  next.rs  pwd.rs  rm.rs  sed.rs  sort.rs  stat.rs  tail.rs  test_false.rs  test_true.rs  theme.rs  touch.rs  tree.rs  uniq.rs  view.rs  wc.rs  which.rs
src/lua/: api.rs  mod.rs  plugins.rs  theme.rs
src/platform/: mod.rs  unix.rs  windows.rs
src/renderer/: error.rs  highlight.rs  markup.rs  menu.rs  mod.rs  overlay.rs  prompt.rs  table.rs
src/shell/: config.rs  context.rs  corrector.rs  execute.rs  handlers.rs  helper.rs  init.rs  mod.rs  state.rs  utils.rs
