[package]
name = "luna"
version = "0.1.0"
edition = "2021"

[dependencies]
shellframe = { git = "https://github.com/sammwyy/shellframe", branch = "main" }
anyhow = "1.0"
rustyline = "14.0"
indexmap = "2.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
toml = "1.1.2"
syntect = "5.3.0"
which = "8.0.2"
strsim = "0.11.1"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
crossterm = "0.27"
glob = "0.3.3"
viuer = "0.7"
meval = "0.2.0"
